--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"author": "WebDesign Master",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/core": "^7.13.14",
-		"@babel/preset-env": "^7.13.12",
+		"@babel/core": "^7.14.3",
+		"@babel/preset-env": "^7.14.2",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-module-resolver": "^4.1.0",
 		"babel-plugin-root-import": "^6.6.0",
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"jquery": "^3.6.0",
 		"mmenu-js": "^8.5.22",
+		"node-notifier": "github:mikaelbr/node-notifier",
 		"swiper": "^6.6.2"
 	}
 }
